# gim14_validation

./: .env  README.md  VALIDATION_METHODOLOGY.md  __init__.py  helpers.py  pyproject.toml  requirements.txt  run_validation.py  validation_results_llm.json  validation_results_no_llm.json
qualitative/: q01_scale_factor.py  q02_damage_function.py  q03_llm_homogeneity.py  q04_write_ordering.py  q05_debt_haircut.py  q06_softmax_structure.py  q07_trade_recovery.py  q08_credit_lag.py  q09_actor_inference.py  q10_equilibrium.py  q11_llm_heterogeneity.py  q12_llm_fallback.py
quantitative/: t01_lyapunov.py  t02_sensitivity.py  t03_crisis_replication.py  t04_relation_audit.py  t05_outcome_calibration.py  t06_llm_sanity.py  t07_llm_reproducibility.py  t08_llm_coherence.py  t09_llm_vs_simple.py
